--- a/example/index.html
+++ b/example/index.html
@@ -8,18 +8,24 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeRDark.min.css"/>
 </head>
 <body class="container">
+
 <h2><code>_.deepFindWhere(familyTree, <span id="deepFindWhereParam"></span>);</code></h2>
 <pre class="brush: js" id="deepFindWhereResult"></pre>
-<h2><code>_.deepWhere(familyTree, <span id="deepWhereParam"></span>);</code></h2>
 
+<h2><code>_.deepWhere(familyTree, <span id="deepWhereParam"></span>);</code></h2>
 <h3>length: <span id="deepWhereLength"></span></h3>
 <pre class="brush: js" id="deepWhereResult"></pre>
-<h2><code>_.deepFilter(familyTree, <span id="deepFilterParam"></span>);</code></h2>
 
+<h2><code>_.deepFilter(familyTree, <span id="deepFilterParam"></span>);</code></h2>
 <h3>length: <span id="deepFilterLength"></span></h3>
 <pre class="brush: js" id="deepFilterResult"></pre>
+
 <h2><code>_.deepFind(familyTree, <span id="deepFindParam"></span>);</code></h2>
 <pre class="brush: js" id="deepFindResult"></pre>
+
+<h2><code>_.deepSearch(familyTree, <span id="deepSearchParam"></span>);</code></h2>
+<h3>length: <span id="deepSearchLength"></span></h3>
+<pre class="brush: js" id="deepSearchResult"></pre>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
