Combined multiple functions.

--- a/example/index.html
+++ b/example/index.html
@@ -9,19 +9,27 @@
 </head>
 <body class="container">
 
-<h2><code>_.deepFindWhere(familyTree, <span id="deepFindWhereParam"></span>);</code></h2>
-<pre class="brush: js" id="deepFindWhereResult"></pre>
+<h2><code>_.deepFind(familyTree, <span id="deepFindParam"></span>);</code></h2>
+<pre class="brush: js" id="deepFindResult"></pre>
 
-<h2><code>_.deepWhere(familyTree, <span id="deepWhereParam"></span>);</code></h2>
-<h3>length: <span id="deepWhereLength"></span></h3>
-<pre class="brush: js" id="deepWhereResult"></pre>
+<hr>
+
+<h2><code>_.deepFind(familyTree, <span id="deepFind2Param"></span>);</code></h2>
+<pre class="brush: js" id="deepFind2Result"></pre>
+
+<hr>
 
 <h2><code>_.deepFilter(familyTree, <span id="deepFilterParam"></span>);</code></h2>
 <h3>length: <span id="deepFilterLength"></span></h3>
 <pre class="brush: js" id="deepFilterResult"></pre>
 
-<h2><code>_.deepFind(familyTree, <span id="deepFindParam"></span>);</code></h2>
-<pre class="brush: js" id="deepFindResult"></pre>
+<hr>
+
+<h2><code>_.deepFilter(familyTree, <span id="deepFilter2Param"></span>);</code></h2>
+<h3>length: <span id="deepFilter2Length"></span></h3>
+<pre class="brush: js" id="deepFilter2Result"></pre>
+
+<hr>
 
 <h2><code>_.deepSearch(familyTree, <span id="deepSearchParam"></span>);</code></h2>
 <h3>length: <span id="deepSearchLength"></span></h3>
